--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,9 +1,25 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>login</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-
+<ion-content [fullscreen]="true">
+  <div id="bg">
+    <ion-fab vertical="bottom" edge horizontal="center" slot="fixed">
+      <ion-fab-button color="white" routerLink="/home">
+        <ion-icon name="close-outline" color="medium"></ion-icon>
+      </ion-fab-button>
+    </ion-fab>
+  </div>
+  <ion-list lines="none" class="ion-margin">
+    <ion-list-header>Login</ion-list-header>
+    <ion-item class="ion-margin">
+      <ion-input placeholder="Votre email" type="email" clearInput="true"></ion-input>
+    </ion-item>
+    <ion-item class="ion-margin">
+      <ion-input placeholder="Enter Password" type="password" clearInput="true"></ion-input>
+    </ion-item>
+    <ion-text color="medium"><p class="ion-margin-horizontal" [routerLink]="['/oubliepass']">Mot de passe oublier</p></ion-text>
+    <div align="right">
+      <ion-button shape="round" strong="true" class="ion-margin-end" color="light" [routerLink]="['/register']">
+        Se Connecter
+        <ion-icon name="log-in" slot="end"></ion-icon>
+      </ion-button>
+    </div>
+  </ion-list>
 </ion-content>
