--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -6,20 +6,22 @@
       </ion-fab-button>
     </ion-fab>
   </div>
-  <ion-list lines="none" class="ion-margin">
-    <ion-list-header>Login</ion-list-header>
-    <ion-item class="ion-margin">
-      <ion-input placeholder="Votre email" type="email" clearInput="true"></ion-input>
-    </ion-item>
-    <ion-item class="ion-margin">
-      <ion-input placeholder="Enter Password" type="password" clearInput="true"></ion-input>
-    </ion-item>
-    <ion-text color="medium"><p class="ion-margin-horizontal" [routerLink]="['/oubliepass']">Mot de passe oublier</p></ion-text>
-    <div align="right">
-      <ion-button shape="round" strong="true" class="ion-margin-end" color="light" [routerLink]="['/register']">
-        Se Connecter
-        <ion-icon name="log-in" slot="end"></ion-icon>
-      </ion-button>
-    </div>
-  </ion-list>
+  <form #form="ngForm"  (ngSubmit)="logUser(form)" >
+    <ion-list lines="none" class="ion-margin">
+      <ion-list-header>Login</ion-list-header>
+      <ion-item class="ion-margin">
+        <ion-input placeholder="Votre email" type="email" ngModel clearInput="true" name="email"></ion-input>
+      </ion-item>
+      <ion-item class="ion-margin">
+        <ion-input placeholder="Enter Password" type="password" ngModel clearInput="true" name="password"></ion-input>
+      </ion-item>
+      <ion-text color="medium"><p class="ion-margin-horizontal" [routerLink]="['/oubliepass']">Mot de passe oublier</p></ion-text>
+      <div align="right">
+        <ion-button type="submit" shape="round" strong="true" class="ion-margin-end" color="light">
+          Se Connecter
+          <ion-icon name="log-in" slot="end"></ion-icon>
+        </ion-button>
+      </div>
+    </ion-list>
+  </form>
 </ion-content>
