--- a/src/app/inscription/inscription.page.html
+++ b/src/app/inscription/inscription.page.html
@@ -6,23 +6,23 @@
       </ion-fab-button>
     </ion-fab>
   </div>
-  <form>
+  <form #form="ngForm"  (ngSubmit)="register(form)">
     <ion-list lines="none" class="ion-margin">
       <ion-list-header>Inscription</ion-list-header>
       <ion-item class="ion-margin">
-        <ion-input placeholder="Votre NomComplet" type="text" name="nom" clearInput="true"></ion-input>
+        <ion-input placeholder="Votre NomComplet" type="text" name="nom" ngModel clearInput="true"></ion-input>
       </ion-item>
       <ion-item class="ion-margin">
-        <ion-input placeholder="Votre Numéro" type="number" clearInput="true"></ion-input>
+        <ion-input placeholder="Votre Numéro" type="number" name="numero" ngModel clearInput="true"></ion-input>
       </ion-item>
       <ion-item class="ion-margin">
-        <ion-input placeholder="Votre email" type="email" clearInput="true"></ion-input>
+        <ion-input placeholder="Votre email" type="email" name="email" ngModel clearInput="true"></ion-input>
       </ion-item>
       <ion-item class="ion-margin">
-        <ion-input placeholder="Mot de passe" type="password" clearInput="true"></ion-input>
+        <ion-input placeholder="Mot de passe" type="password" name="password" ngModel clearInput="true"></ion-input>
       </ion-item>
       <div align="right">
-        <ion-button shape="round" strong="true" class="ion-margin-end" color="success" [routerLink]="['/login']">
+        <ion-button shape="round" type="submit" strong="true" class="ion-margin-end" color="success">
           S'incrire
           <ion-icon name="log-in" slot="end"></ion-icon>
         </ion-button>
