--- a/src/app/oubliepass/oubliepass.page.html
+++ b/src/app/oubliepass/oubliepass.page.html
@@ -1,9 +1,23 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>oubliepass</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-
+<ion-content [fullscreen]="true">
+  <div id="bg">
+    <ion-fab vertical="bottom" edge horizontal="center" slot="fixed">
+      <ion-fab-button color="white" routerLink="/home">
+        <ion-icon name="close-outline" color="medium"></ion-icon>
+      </ion-fab-button>
+    </ion-fab>
+  </div>
+  <form>
+    <ion-list lines="none" class="ion-margin">
+      <ion-list-header>Mot de Passe Oulier</ion-list-header>
+      <ion-item class="ion-margin">
+        <ion-input placeholder="Votre email" type="email" ngModel clearInput="true" name="email"></ion-input>
+      </ion-item>
+      <div align="right">
+        <ion-button type="submit" shape="round" strong="true" class="ion-margin-end" [routerLink]="['/reinitialisation']" color="light">
+          Envoyer
+          <ion-icon name="log-in" slot="end"></ion-icon>
+        </ion-button>
+      </div>
+    </ion-list>
+  </form>
 </ion-content>
