--- a/src/app/reinitialisation/reinitialisation.page.html
+++ b/src/app/reinitialisation/reinitialisation.page.html
@@ -1,9 +1,26 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>reinitialisation</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-
+<ion-content [fullscreen]="true">
+  <div id="bg">
+    <ion-fab vertical="bottom" edge horizontal="center" slot="fixed">
+      <ion-fab-button color="white" routerLink="/home">
+        <ion-icon name="close-outline" color="medium"></ion-icon>
+      </ion-fab-button>
+    </ion-fab>
+  </div>
+  <form>
+    <ion-list lines="none" class="ion-margin">
+      <ion-list-header>Mot de Passe</ion-list-header>
+      <ion-item class="ion-margin">
+        <ion-input placeholder="Nouveau Mot de Passe" type="password" ngModel clearInput="true" name="email"></ion-input>
+      </ion-item>
+      <ion-item class="ion-margin">
+        <ion-input placeholder="Confirmer Mot de Password" type="password" ngModel clearInput="true" name="password"></ion-input>
+      </ion-item>
+      <div align="right">
+        <ion-button type="submit" shape="round" strong="true" [routerLink]="['/acceuil']" class="ion-margin-end" color="light">
+          Connection
+          <ion-icon name="log-in" slot="end"></ion-icon>
+        </ion-button>
+      </div>
+    </ion-list>
+  </form>
 </ion-content>
