--- a/src/app/search/search.page.html
+++ b/src/app/search/search.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="primary">
+  <ion-toolbar color="medium">
     <ion-back-button slot="start"></ion-back-button>
     <ion-title>Recherche</ion-title>
   </ion-toolbar>
