--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -1,3 +1,15 @@
-<ion-avatar>
-  <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y">
-</ion-avatar>
+<ion-header>
+  <ion-toolbar>
+    <ion-back-button slot="start"></ion-back-button>
+    <ion-title>Profil</ion-title>
+  </ion-toolbar>
+</ion-header>
+<ion-content>
+
+  <ion-list lines="none">
+    <ion-item>
+          <img src='../../assets/icon/Users.png'>
+    </ion-item>
+  </ion-list>
+
+</ion-content>
