--- a/src/app/acceuil/acceuil.page.html
+++ b/src/app/acceuil/acceuil.page.html
@@ -10,13 +10,13 @@
         </ion-header>
         <ion-content>
           <ion-list>
-            <ion-item>
+            <ion-item [routerLink]="['/profile']">
               <ion-icon name="person-circle"></ion-icon>
-              <ion-label [routerLink]="['/profile']" fill="clear">Profil</ion-label>
+              <ion-label>Profile</ion-label>
             </ion-item>
-            <ion-item>
+            <ion-item [routerLink]="['/home']">
               <ion-icon name="power-sharp"></ion-icon>
-              <ion-label [routerLink]="['/home']" fill="clear">Se Déconnecter</ion-label>
+              <ion-label>Se Déconnecter</ion-label>
             </ion-item>
           </ion-list>
         </ion-content>
