--- a/src/app/acceuil/acceuil.page.html
+++ b/src/app/acceuil/acceuil.page.html
@@ -14,7 +14,7 @@
               <ion-icon name="person-circle"></ion-icon>
               <ion-label>Profile</ion-label>
             </ion-item>
-            <ion-item [routerLink]="['/home']">
+            <ion-item (click)="signOut()">
               <ion-icon name="power-sharp"></ion-icon>
               <ion-label>Se Déconnecter</ion-label>
             </ion-item>
