--- a/src/app/nouveau-pass/nouveau-pass.page.html
+++ b/src/app/nouveau-pass/nouveau-pass.page.html
@@ -1,7 +1,7 @@
 <ion-content [fullscreen]="true">
   <div id="bg">
     <ion-fab vertical="bottom" edge horizontal="center" slot="fixed">
-      <ion-fab-button color="white" routerLink="/home">
+      <ion-fab-button color="white" routerLink="/acceuil">
         <ion-icon name="close-outline" color="medium"></ion-icon>
       </ion-fab-button>
     </ion-fab>
