Ionic Tp App(Gestion des Utilisateurs); Inscription, Login, Profile, Recherche, Deconnection.

--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar color="medium">
-    <ion-back-button slots="start"></ion-back-button>
+    <ion-back-button slot="start"></ion-back-button>
     <ion-title>Profile</ion-title>
   </ion-toolbar>
 </ion-header>
