--- a/src/app/acceuil/acceuil.page.html
+++ b/src/app/acceuil/acceuil.page.html
@@ -10,8 +10,8 @@
         </ion-header>
         <ion-content>
           <ion-list>
-            <ion-item>
-              <ion-icon name="person-circle" [routerLink]="['/profile']"></ion-icon>
+            <ion-item [routerLink]="['/profile']">
+              <ion-icon name="person-circle" ></ion-icon>
               <ion-label>Profile</ion-label>
             </ion-item>
             <ion-item (click)="signOut()">
